syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xws.accommodation";

import "google/protobuf/empty.proto";

import "common.proto";

message Accommodation {
  string id = 1;
  string name = 2;
}

message CheckIfAccommodationHasActiveReservationsRequest {
  Accommodation accommodation = 1;
}

message CheckIfAccommodationHasActiveReservationsResponse {
  bool accommodation_has_active_reservations = 1;
}

message AddAccommodationToUserOwner {
  Accommodation accommodation = 1;
  string user_owner_id = 2;
}

service AccommodationService {
  rpc AddReservationToAccommodation(AddReservationToAccommodationRequest) returns (google.protobuf.Empty);
  rpc CheckIfAccommodationHasActiveReservations(CheckIfAccommodationHasActiveReservationsRequest) returns (CheckIfAccommodationHasActiveReservationsResponse);
}

service UserService {
  rpc AddReservationToUser(AddReservationToUserRequest) returns (google.protobuf.Empty);
  rpc AddAccommodationToUser(AddAccommodationToUserOwner) returns (google.protobuf.Empty);
}

message AddReservationToAccommodationRequest {
  string accommodation_id = 1;
  common.Reservation reservation = 2;
  string source_user = 3;
}

message AddReservationToUserRequest {
  string accommodation_id = 1;
  common.Reservation reservation = 2;
  string source_user = 3;
}